--- a/package.json
+++ b/package.json
@@ -4,23 +4,38 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "Markdown to PDF service for my easycsit project. Provides api endpoint to convert markdown string into pdf, created pdf is uploaded in drive service and its link is provided",
   "devDependencies": {
-    "@types/node": "^22.13.10"
+    "@types/node": "^22.13.10",
+    "nodemon": "^3.1.9"
   },
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs-extra": "^11.3.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
     "jsonwebtoken": "^9.0.2",
-    "markdown-pdf": "^11.0.0"
+    "markdown-pdf": "^11.0.0",
+    "mongoose": "^8.12.1",
+    "puppeteer": "^24.4.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-stringify": "^10.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-prism": "^1.3.6",
+    "remark-rehype": "^11.1.1",
+    "unified": "^11.0.5"
   }
 }
