--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "markdown-pdf": "^11.0.0",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "puppeteer": "^24.4.0",
     "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.14.1",
